# smart-quote

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: agent.py  database.py  main.py  models.py  schemas.py  smart-quotes.db
ui/: all_quotes.py  app.py  create_quote.py  register.py  settings.py
ui/admin/: admin_register.py  create_quote.py  custom_instructions.py
ui/customer/: customer_quotes.py  customer_register.py  request_quote.py
