[project]
name = "smart-quote"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.2.0",
    "cryptography>=45.0.5",
    "fastapi>=0.116.0",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.8",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.46.1",
    "uvicorn>=0.35.0",
]
